test/errors/type/collections/set/clear.yasl
echo collections.set().clear(1)
